#3500: Illustratr: Fix overflowing column content

--- a/illustratr/blocks.css
+++ b/illustratr/blocks.css
@@ -71,6 +71,15 @@ Description: Used to style Gutenberg Blocks.
 
 /* Wide Width */
 
+.wp-block-cover .wp-block-columns {
+	margin: 0 auto;
+	width: 100%;
+}
+
+.wp-block-cover .wp-block-columns:not(.alignwide, .alignfull) {
+	max-width: 840px;
+}
+
 @media (min-width: 1024px) {
 	.alignwide {
 		width: 120%;
@@ -78,6 +87,12 @@ Description: Used to style Gutenberg Blocks.
 		margin-left: -10%;
 		margin-right: -10%;
 		position: relative;
+	}
+
+	.wp-block-cover:is(.alignfull) .wp-block-columns.alignwide {
+		width: calc(840px + 10%);
+		max-width: 100%;
+		margin: 0 auto;
 	}
 
 	.wp-block-embed.is-type-video.alignwide iframe {
@@ -89,6 +104,8 @@ Description: Used to style Gutenberg Blocks.
 /*--------------------------------------------------------------
 2.0 Blocks - Common Blocks
 --------------------------------------------------------------*/
+/* Columns */
+
 
 /* Paragraph */
 
